--- a/templates/register.html
+++ b/templates/register.html
@@ -1,65 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Register</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.0.2/dist/tailwind.min.css" rel="stylesheet">
-</head>
-<body class="bg-gray-100">
-    <header class="flex justify-center items-center py-4 bg-blue-600">
-        <div class="container mx-auto text-center">
-            <h1 class="text-xl font-bold text-white">Twitter Clone</h1>
-        </div>
+    <link
+      href="https://cdn.jsdelivr.net/npm/tailwindcss@2.0.2/dist/tailwind.min.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body class="bg-gray-100" style="background-color: black">
+    <header
+      class="flex justify-center items-center py-4 bg-blue-600"
+      style="background-color: black"
+    >
+      <div class="container mx-auto text-center">
+        <h1
+          class="text-xl font-bold text-white"
+          style="background-color: black"
+        >
+          Twitter Clone
+        </h1>
+      </div>
     </header>
-    
-    <div class="container mx-auto mt-8">
-        <div class="max-w-md w-full mx-auto bg-white p-8 border border-gray-300">
-            <h1 class="text-3xl font-bold mb-4">Sign Up</h1>
-            <form method="POST" action="{{ url_for('register') }}" class="max-w-md mx-auto mt-8 p-6 bg-white rounded-lg shadow-md">
-                {{ form.hidden_tag() }}
-                <div class="mb-4">
-                    <label for="{{ form.username.id }}" class="block text-gray-700 font-bold mb-2">
-                        {{ form.username.label }}
-                    </label>
-                    {{ form.username(size=32, class_="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500") }}
-                </div>
-                <div class="mb-4">
-                    <label for="{{ form.email.id }}" class="block text-gray-700 font-bold mb-2">
-                        {{ form.email.label }}
-                    </label>
-                    {{ form.email(size=32, class_="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500") }}
-                </div>
-                <div class="mb-4">
-                    <label for="{{ form.password_hash.id }}" class="block text-gray-700 font-bold mb-2">
-                        {{ form.password_hash.label }}
-                    </label>
-                    {{ form.password_hash(size=32, class_="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500") }}
-                </div>
-                <div class="mb-4">
-                    <label for="{{ form.confirm_password.id }}" class="block text-gray-700 font-bold mb-2">
-                        {{ form.confirm_password.label }}
-                    </label>
-                    {{ form.confirm_password(size=32, class_="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500") }}
-                </div>
-                <div class="mb-4">
-                    <label for="{{ form.remember.id }}" class="inline-flex items-center">
-                        {{ form.remember(class_="mr-2") }}
-                        <span class="text-gray-700">{{ form.remember.label }}</span>
-                    </label>
-                </div>
-                <div>
-                    {{ form.submit(class_="w-full bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-600") }}
-                </div>
-                <div class="text-center">
-                    <p class="text-gray-600">Already have an account? 
-                        <a href="{{ url_for('login') }}" class="text-blue-500 hover:text-blue-700 font-semibold">Login here</a>
-                    </p>
-                </div>
-            </form>
-            
-            
-        </div>
+
+    <div class="container mx-auto mt-8" style="background-color: black">
+      <div
+        class="max-w-md w-full mx-auto bg-white p-8 border border-gray-300"
+        style="background-color: black"
+      >
+        <h1
+          class="text-3xl font-bold mb-4"
+          style="
+            color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+          "
+        >
+          Sign Up
+        </h1>
+        <form
+          method="POST"
+          action="{{ url_for('register') }}"
+          class="max-w-md mx-auto mt-8 p-6 bg-white rounded-lg shadow-md"
+          style="background-color: black"
+        >
+          {{ form.hidden_tag() }}
+          <div class="mb-4">
+            <label
+              for="{{ form.username.id }}"
+              class="block text-gray-700 font-bold mb-2"
+              style="color: white"
+            >
+              {{ form.username.label }}
+            </label>
+            {{ form.username(size=32, class_="w-full px-3 py-2 border rounded-lg
+            focus:outline-none focus:ring-2 focus:ring-blue-500") }}
+          </div>
+          <div class="mb-4">
+            <label
+              for="{{ form.email.id }}"
+              class="block text-gray-700 font-bold mb-2"
+              style="color: white"
+            >
+              {{ form.email.label }}
+            </label>
+            {{ form.email(size=32, class_="w-full px-3 py-2 border rounded-lg
+            focus:outline-none focus:ring-2 focus:ring-blue-500") }}
+          </div>
+          <div class="mb-4">
+            <label
+              for="{{ form.password_hash.id }}"
+              class="block text-gray-700 font-bold mb-2"
+              style="color: white"
+            >
+              {{ form.password_hash.label }}
+            </label>
+            {{ form.password_hash(size=32, class_="w-full px-3 py-2 border
+            rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500") }}
+          </div>
+          <div class="mb-4">
+            <label
+              for="{{ form.confirm_password.id }}"
+              class="block text-gray-700 font-bold mb-2"
+              style="color: white"
+            >
+              {{ form.confirm_password.label }}
+            </label>
+            {{ form.confirm_password(size=32, class_="w-full px-3 py-2 border
+            rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500") }}
+          </div>
+          <div class="mb-4">
+            <label
+              for="{{ form.remember.id }}"
+              class="inline-flex items-center"
+              style="color: white"
+            >
+              {{ form.remember(class_="mr-2") }}
+              <span class="text-gray-700" style="color: white"
+                >{{ form.remember.label }}</span
+              >
+            </label>
+          </div>
+          <div>
+            {{ form.submit(class_="w-full bg-blue-500 text-white py-2 px-4
+            rounded-lg hover:bg-blue-600") }}
+          </div>
+          <div class="text-center">
+            <p class="text-gray-600" style="color: white">
+              Already have an account?
+              <a
+                href="{{ url_for('login') }}"
+                class="text-blue-500 hover:text-blue-700 font-semibold"
+                >Login here</a
+              >
+            </p>
+          </div>
+        </form>
+      </div>
     </div>
-</body>
+  </body>
 </html>
